--- a/shared/css/header_footer_styles.css
+++ b/shared/css/header_footer_styles.css
@@ -43,7 +43,6 @@ nav.navbar {  /* makes the navbar text slightly smaller than default and give pa
 .dropdown-item {
 	font-size: .875rem;   /* makes the navbar text slightly smaller than default */
 	width: 99%; /* makes the outline stay in the column */
-	background-color: #f8f9fa!important;
 }
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
 	color: rgba(0,0,0,1)!important;  /* this makes the dropdown header darker then the rest of headers when a page within it is selected */
@@ -51,7 +50,7 @@ nav.navbar {  /* makes the navbar text slightly smaller than default and give pa
 	border: none;      /* this takes away the default focus & focus style from above */
 }
 .navbar-light .dropdown-item.active, .dropdown-item:active {  /* when the menu option is clicked this styling is activated */
-	background-color:green ;
+	background-color:#3e6f7d;
 	color: white;
 }
 .navbar-nav>.nav-item.active {
