--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1021,13 +1021,13 @@ ul.list-unstyled li.list-group-item {
 ul.list-unstyled li.list-group-item:last-child {
 	margin-bottom: 0;
 	border-radius: 0;
-	border-bottom: 1px solid #ccc;
+	border-bottom: 1px solid transparent;
 }
 /*Not sure if this is a mistake or is used somewhere. This would be the last 2 of parent and nested groups*/
 /*ul > li.list-group-item:nth-last-of-type(-n+2) {
 	border-bottom: none;
 }*/
-ul > li.list-group-item:nth-last-of-type(-n+1) {
+ul > li.list-group-item:nth-last-of-type(n+1) {
 	border-bottom: none;
 /*	padding-bottom: .5rem;*/
 	background-color:transparent;
