--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2233,7 +2233,11 @@ div.vslider-item[aria-hidden="true"]{
 	background-color: lightgrey;
 	border-radius: 10px;
 }
-
+.media_widget {
+	background-color: #444444;
+	padding: 1rem;
+	
+}
 
 /****************end all screen styles*********************/
 /**********************************************************/
