--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -171,6 +171,10 @@ h1.h4 {
 .btn-link, .helpText, .fas-info {
 	color: #036ee0 !important;
 }
+.mgImg {
+	min-height: 11rem;
+	vertical-align:middle;
+}
 span.caps {
 	text-transform: capitalize;
 }
