--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -171,8 +171,10 @@ h1.h4 {
 .btn-link, .helpText, .fas-info {
 	color: #036ee0 !important;
 }
-.mgImg {
+a.mgImg {
 	min-height: 11rem;
+}
+a.mgImg img {
 	vertical-align:middle;
 }
 span.caps {
