--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1873,8 +1873,8 @@ tr.line-top:first-child {
 input#readMore_check_id {
 	display: none!important;
 }
-.comma2 span.two{display:inline;}
-.comma2 span.two:last-child {display:none;}
+.comma2 span{display:inline;}
+.comma2 span:last-child {display:none;}
 .jqx-grid-load {
 	background-image: url("../../images/spinner_712_sm.gif");
 	background-position: 50% 50%;
