Redmine Issue 905; PURPOSE:  RelatedMedia.cfm; Attempting to make all related media show. Table relationships.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2972,6 +2972,9 @@ ol.flowNone li a,ul.flowNone li a {
 }
 }
 @media only screen and (max-width: 1379px) {
+.variedHeight {
+	height: 200px;	
+}
 ol.flowXXS, ul.flowXXS {
 	display:flex;
 	flex-flow: column wrap; /* direction: column */
