Redmine Issue 905; PURPOSE:  RelatedMedia.cfm; Attempting to make all related media show. Table relationships.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -3299,7 +3299,9 @@ ol.flowNone li a, ul.flowNone li a {
 }
 }	
 @media only screen and (max-width: 768px) {
-
+	.variedHeight {
+		height: 180px;
+	}
 .tab-content {
 	margin-top: -4px;
 }
