Redmine Issue 905; PURPOSE:  RelatedMedia.cfm; Attempting to make all related media show. Table relationships.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -3601,6 +3601,9 @@ text-truncate1 {
 	#map {
 		height: 350px;
 	}
+	.variedHeight {
+		height: 240px;
+	}
 }
 @media screen and (max-width: 414px) {
 	a.btn-sm {
