--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2707,7 +2707,7 @@ input[disabled] {
 		width: 21.5rem!important;
 	}
 .variedHeight {
-	height: 230px;
+	height: 200px;
 }
 @keyframes slideup {
 	from {top: 700px;}
@@ -3360,6 +3360,7 @@ text-truncate1 {
 		font-size: .875rem;
 		margin-bottom: 1rem;
 	}
+
 	div span.ilt {
 		display: block;
 		height: 100%;
@@ -3455,6 +3456,9 @@ text-truncate1 {
 @media(min-width: 1200px) {
 	.container-xl {
 		max-width: 1600px;
+	}
+	.variedHeight {
+	height: 250px;
 	}
 }
 @media(min-width: 1600px) {
