--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2722,6 +2722,13 @@ tr.line-top-sd {
 /*********************************/
 /* Device styles below ***********/
 /*********************************/
+@media only screen and (min-width: 2000px) {
+
+	.variedHeight {
+	height: 180px;
+}
+	
+}
 @media only screen and (min-width: 1599px) {
 	.container-wide {
 		padding-right: 9%;
