Redmine Issue 905; PURPOSE:  RelatedMedia.cfm; Attempting to make all related media show. Table relationships.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2717,6 +2717,9 @@ table.tablesection td {
 tr.line-top-sd {
 	border-top: 2px solid #e8eaeb!important;
 }
+.variedHeight {
+	height: 180px;
+}
 /****************end all screen styles*********************/
 /**********************************************************/
 /*********************************/
@@ -2725,7 +2728,7 @@ tr.line-top-sd {
 @media only screen and (min-device-width: 1400px) and (max-device-width: 2000px) {
 
 	.variedHeight {
-	height: 180px;
+	height: 200px;
 }
 	
 }
