--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -3084,6 +3084,11 @@ ol.flowNone li a, ul.flowNone li a {
 	padding-right: 3px;
 }
 }
+@media only screen and (max-width: 1250px) {
+	.variedHeight {
+		height: 250px;
+	}
+}
 @media only screen and (max-width: 990px) {
 	input#searchText.form-control {
 		min-width: auto;
