Redmine Issue 915  -- Switch out multizoom for css; testing on dev/Specimen page

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -265,6 +265,10 @@ div:focus, div > span:focus {
 	width: 0;
 	overflow: hidden;
 }
+.accordion >.card {
+	overflow-y: hidden; 
+	overflow-x:visible;
+}
 a {
 	color:#006ee3;/*not working for accessibility*/
 	color: #0460c1;
