--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2710,7 +2710,36 @@ input[disabled] {
 .html_desc {
 	width: 21.5rem!important;
 }
-
+.img-block {
+	 display: flex;
+	 justify-content: center;
+	 align-items: center;
+	 height: 100vh;
+}
+ .magnify-wrapper {
+	 position: relative;
+	 max-height: 50vh;
+}
+ .magnify-wrapper img {
+	 max-height: inherit;
+}
+ .magnify-wrapper #large-img {
+	 background: url("https://images.unsplash.com/photo-1542856204-00101eb6def4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80") no-repeat #fff;
+	 width: 150px;
+	 height: 150px;
+	 box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.3);
+	 pointer-events: none;
+	 position: absolute;
+	 border: 4px solid #efefef;
+	 z-index: 99;
+	 border-radius: 100%;
+	 display: block;
+	 opacity: 0;
+	 transition: opacity 0.2s;
+}
+ .magnify-wrapper:hover #large-img, .magnify-wrapper:active #large-img {
+	 opacity: 1;
+}
 @keyframes slideup {
 	from {top: 700px;}
 	to {top:100px;}
