--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2724,7 +2724,7 @@ input[disabled] {
 	 max-height: inherit;
 }
  .magnify-wrapper #large-img {
-	 background: url("https://images.unsplash.com/photo-1542856204-00101eb6def4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80") no-repeat #fff;
+	/* background: url("https://images.unsplash.com/photo-1542856204-00101eb6def4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80") no-repeat #fff;*/
 	 width: 150px;
 	 height: 150px;
 	 box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.3);
