--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2714,7 +2714,7 @@ input[disabled] {
 	 display: flex;
 	 justify-content: center;
 	 align-items: center;
-	 height: 100vh;
+	 height: auto;
 }
  .magnify-wrapper {
 	 position: relative;
