Redmine Issue 915  -- Switch out multizoom for css; testing on dev/Specimen page

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2711,31 +2711,30 @@ input[disabled] {
 	width: 21.5rem!important;
 }
 .img-block {
-	 display: flex;
-	 justify-content: center;
-	 align-items: center;
-	 height: auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 350rem;
 }
  .magnify-wrapper {
-	 position: relative;
-	 max-height: 50vh;
+	position: relative;
+	max-height: 50vh;
 }
  .magnify-wrapper img {
-	 max-height: inherit;
+	max-height: inherit;
 }
  .magnify-wrapper #large-img {
-	/* background: url("https://images.unsplash.com/photo-1542856204-00101eb6def4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80") no-repeat #fff;*/
-	 width: 300px;
-	 height: 300px;
-	 box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.3);
-	 pointer-events: none;
-	 position: absolute;
-	 border: 4px solid #efefef;
-	 z-index: 99;
-	 border-radius: 100%;
-	 display: block;
-	 opacity: 0;
-	 transition: opacity 0.2s;
+	width: 300px;
+	height: 300px;
+	box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.3);
+	pointer-events: none;
+	position: absolute;
+	border: 4px solid #efefef;
+	z-index: 99;
+	border-radius: 100%;
+	display: block;
+	opacity: 0;
+	transition: opacity 0.2s;
 }
  .magnify-wrapper:hover #large-img, .magnify-wrapper:active #large-img {
 	 opacity: 1;
