--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2724,8 +2724,8 @@ input[disabled] {
 	max-height: inherit;
 }
  .magnify-wrapper #large-img {
-	width: 300px;
-	height: 300px;
+	width: auto;
+	height: auto;
 	box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.3);
 	pointer-events: none;
 	position: absolute;
