Redmine Issue 915  -- Switch out multizoom for css; testing on dev/Specimen page

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2714,11 +2714,11 @@ input[disabled] {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	min-height: 100px;
+	min-height: 76px;
 }
  .magnify-wrapper {
 	position: relative;
-	max-height: 50vh;
+	max-height: 76px;
 }
  .magnify-wrapper img {
 	max-height: inherit;
