Redmine Issue 915  -- Switch out multizoom for css; testing on dev/Specimen page

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2718,7 +2718,7 @@ input[disabled] {
 }
  .magnify-wrapper {
 	position: relative;
-	max-height: 76px;
+	max-height: 50vh;
 }
  .magnify-wrapper img {
 	max-height: inherit;
