Redmine Issue 915  -- Switch out multizoom for css; testing on dev/Specimen page

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2714,6 +2714,7 @@ input[disabled] {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	height: 100%;
 }
  .magnify-wrapper {
 	position: relative;
