--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2721,14 +2721,13 @@ input[disabled] {
  .magnify-wrapper {
 	position: relative;
 	min-height: 76px;
-	border: 1px solid purple;
 }
  .magnify-wrapper img {
-	max-height: 300px;
+	max-height: inherit;
 }
  .magnify-wrapper #large-img {
-	width: 300px;
-	height: 300px;
+	width: 180px;
+	height: 180px;
 	box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.3);
 	pointer-events: none;
 	position: absolute;
