Redmine Issue 915  -- Switch out multizoom for css; testing on dev/Specimen page

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2711,12 +2711,11 @@ input[disabled] {
 	width: 21.5rem!important;
 }
 /*IMAGE magnifier*/
-.img-block {
+.img-block {/*container for image*/
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	min-height: 76px;
-	border:1px solid green;
 }
  .magnify-wrapper {
 	position: relative;
