--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2711,34 +2711,31 @@ input[disabled] {
 	width: 21.5rem!important;
 }
 /*IMAGE magnifier*/
-.img-block {/*container for image*/
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	min-height: 76px;
+.thumbnailMain{
+width: 100px;
+height: auto;
+z-index:1;
 }
- .magnify-wrapper {
-	position: relative;
-	min-height: 76px;
+.largerImg{
+min-width: 500px;
+height: auto;
+position: absolute;
+opacity:0;
+left:0;
+top:0;
 }
- .magnify-wrapper img {
-	max-height: inherit;
-}
- .magnify-wrapper #large-img {
-	width: 180px;
-	height: 180px;
-	box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.3);
-	pointer-events: none;
-	position: absolute;
-	border: 4px solid #efefef;
-	z-index: 99;
-	border-radius: 100%;
-	display: block;
-	opacity: 0;
-	transition: opacity 0.2s;
-}
- .magnify-wrapper:hover #large-img, .magnify-wrapper:active #large-img {
-	 opacity: 1;
+.largerImg:hover {
+min-width: 500px;
+height: auto;
+position: absolute;
+opacity:1;
+margin: 5px;
+display:block;
+z-index:999;
+cursor: pointer;
+-webkit-transition-property: all;
+-webkit-transition-duration: 0.3s;
+-webkit-transition-timing-function: ease;
 }
 /*************End Image magnifier***************/
 /**********************************************/
