Redmine Issue 915  -- Switch out multizoom for css; testing on dev/Specimen page

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -658,6 +658,7 @@ BELOW: SPECIMEN DETAIL STYLES
 }
 .media_widget {
 	font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	position: relative;
 }
 li.pid {
 	padding-left: 0;
